Update favicon & title

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <script src="https://www.youtube.com/iframe_api"></script>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Ehos | Music Manager & Player</title>
   </head>
   <body>
     <div id="root"></div>
